--- a/src/app/spotify/shared/track-summary-graph/track-summary-graph.component.html
+++ b/src/app/spotify/shared/track-summary-graph/track-summary-graph.component.html
@@ -3,7 +3,10 @@
         <div class="card-title">
             <h4>{{chartTitle}}</h4>
         </div>
-        <p-dropdown [options]="featureRanges" [(ngModel)]="selectedDate" placeholder="Monthly" optionLabel="name" [showClear]="false" styleClass="w-9rem" (onChange)="onDateChangeBarChart()"></p-dropdown>
+        <p-dropdown [options]="featureRanges" [(ngModel)]="selectedDate" placeholder="Monthly" optionLabel="name"
+            [showClear]="false" styleClass="w-9rem">
+             <!-- (onChange)="onDateChangeBarChart()"> -->
+        </p-dropdown>
     </div>
     <div class="chart-info mb-3 flex align-items-center gap-5 flex-wrap">
         <div class="info">
