added preview track in all list components

--- a/src/app/spotify/audio-history/audio-history.component.html
+++ b/src/app/spotify/audio-history/audio-history.component.html
@@ -76,6 +76,9 @@
                     <p-tableHeaderCheckbox />
                 </th>
                 <th style="width:80px">
+                    Preview
+                </th>
+                <th style="width:80px">
                 </th>
                 <th pSortableColumn="track.name">
                     Title
@@ -118,6 +121,9 @@
                 </td>
                 <td>
                     <p-tableCheckbox [value]="track" />
+                </td>
+                <td>
+                    <p-button icon="pi pi-play-circle" [rounded]="true" severity="primary" [outlined]="true" (onClick)="showPreviewPopup(track)" />
                 </td>
                 <td><img [src]="track.track.album.images[0].url" style="width:60px;height: 60px;border-radius: 50%;">
                 </td>
@@ -204,3 +210,18 @@
     </div>
 
 </p-dialog>
+
+
+<p-dialog class="track_preview_dialog" [modal]="true" [draggable]="false" [(visible)]="showPreview" [closable]="true"
+    [style]="{ width: '50rem' }">
+    <div class="">
+        <iframe [src]="currentTrack?.uri | uri" width="600" height="230" frameborsrcder="0" allowtransparency="true"
+            allow="encrypted-media"></iframe>
+    </div>
+</p-dialog>
+
+
+
+
+
+
