--- a/src/app/spotify/audio-library/audio-library.component.html
+++ b/src/app/spotify/audio-library/audio-library.component.html
@@ -89,6 +89,9 @@
                     <p-tableHeaderCheckbox />
                 </th>
                 <th style="width:80px">
+                    Preview
+                </th>
+                <th style="width:80px">
                 </th>
                 <th pSortableColumn="name" style="width:250px">
                     Title
@@ -139,15 +142,15 @@
                 <td>
                     <p-tableCheckbox [value]="track" />
                 </td>
+                <td>
+                    <p-button icon="pi pi-play-circle" [rounded]="true" severity="primary" [outlined]="true" (onClick)="showPreviewPopup(track)" />
+                </td>
                 <td><img [src]="track.album?.images[0].url" style="width:60px;height: 60px;border-radius: 50%;">
                 </td>
                 <td>
                     <p-button class="anchor_btn" [label]="track?.name" [link]="true"
                         (onClick)="navigateToTrackDetails(track.name,track.id)" />
                 </td>
-                <!-- <td>
-                    <p-button icon="pi pi-play-circle" [rounded]="true" severity="success" [outlined]="true" (onClick)="showPreviewPopup(track)" />
-                </td> -->
                 <td>{{track.artists[0].name}}</td>
                 <td>{{ formatTrackDuration(track?.duration_ms) }}</td>
                 <td>{{ track.audio_features?.tempo | round}}</td>
@@ -225,10 +228,10 @@
 </p-dialog>
 
 
-<p-dialog header="Track Preview" [modal]="true" [draggable]="false" [(visible)]="showPreview" [closable]="true"
+<p-dialog class="track_preview_dialog" [modal]="true" [draggable]="false" [(visible)]="showPreview" [closable]="true"
     [style]="{ width: '50rem' }">
     <div class="">
-        <iframe [src]="currentTrack?.uri | uri" width="600" height="250" frameborsrcder="0" allowtransparency="true"
-            allow="encrypted-media"></iframe>
+        <iframe [src]="currentTrack?.uri | uri" width="600" height="230" frameborsrcder="0" allowtransparency="true"
+            allow="encrypted-media" sandbox="allow-scripts allow-same-origin"></iframe>
     </div>
 </p-dialog>
