added several changes and fixes

--- a/src/app/spotify/audio-library/audio-library.component.html
+++ b/src/app/spotify/audio-library/audio-library.component.html
@@ -232,6 +232,6 @@
     [style]="{ width: '50rem' }">
     <div class="">
         <iframe [src]="currentTrack?.uri | uri" width="600" height="230" frameborsrcder="0" allowtransparency="true"
-            allow="encrypted-media" sandbox="allow-scripts allow-same-origin"></iframe>
+            allow="encrypted-media ; autoplay" sandbox="allow-scripts allow-same-origin" ></iframe>
     </div>
 </p-dialog>
