--- a/src/app/spotify/liked-songs/liked-songs.component.html
+++ b/src/app/spotify/liked-songs/liked-songs.component.html
@@ -225,7 +225,7 @@
     [style]="{ width: '50rem' }">
     <div class="">
         <iframe [src]="currentTrack?.uri | uri" width="600" height="230" frameborsrcder="0" allowtransparency="true"
-            allow="encrypted-media"></iframe>
+            allow="encrypted-media ; autoplay"></iframe>
     </div>
 </p-dialog>
 
