--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,6 +40,15 @@
                         </a>
                     </li>
 
+                    <li (click)="navigateToPath('/strava/activities')">
+                        <a pRipple
+                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
+                            <!-- <i class="pi pi-headphones mr-2 "></i> -->
+                            <i class="bi bi-activity mr-2"></i>
+                            <span class="font-medium">Activities</span>
+                        </a>
+                    </li>
+
                     <li (click)="navigateToPath('/spotify/audio-library')">
                         <a pRipple
                             class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
