--- a/src/app/strava/activity-details/activity-details.component.html
+++ b/src/app/strava/activity-details/activity-details.component.html
@@ -22,7 +22,8 @@
                 <h3>Activity Details</h3>
                 <div>
                     <p-button class="pr-3 btn-grp-custom" [outlined]="!showActivityGraph" size="small"
-                        (onClick)="showActivityGraphChanged()" pTooltip="Activity Detail Graph" tooltipPosition="bottom">
+                        (onClick)="showActivityGraphChanged()" pTooltip="Activity Detail Graph"
+                        tooltipPosition="bottom">
                         <span class="material-symbols-outlined">
                             show_chart
                         </span>
@@ -39,8 +40,9 @@
                 </div>
             </div>
 
-            <div  *ngIf="showActivityGraph">
-                <app-activity-detail-chart [activityDetails]="activityDetails[0]" [pairedTracks]="pairedTracks" ></app-activity-detail-chart>
+            <div *ngIf="showActivityGraph">
+                <app-activity-detail-chart [activityDetails]="activityDetails[0]"
+                    [pairedTracks]="pairedTracks"></app-activity-detail-chart>
             </div>
         </ng-template>
         <ng-template pTemplate="header">
@@ -57,6 +59,7 @@
                 <th>Moving Time</th>
                 <th>Pace </th>
                 <th>Speed</th>
+                <th>Omit</th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-track>
@@ -81,6 +84,19 @@
                 <td>{{track.moving_time}}</td>
                 <td>{{track.pace }} /km</td>
                 <td>{{track.speed | number:'1.2-2'}} km/hr</td>
+                @if(isADSaved){
+                <td>
+                    <div class="flex flex-row justify-content-center">
+                        <span class="pi pi-check" *ngIf="track.isOmitted"></span>
+                        <span class="pi pi-times" *ngIf="!track.isOmitted"></span>
+                    </div>
+                </td>
+                }@else {
+                <td>
+                    <p-inputSwitch (onChange)="changeOmissionStatus($event,track.track.id)"/>
+                </td>
+                }
+
             </tr>
         </ng-template>
     </p-table>
