--- a/src/app/spotify/liked-songs/liked-songs.component.html
+++ b/src/app/spotify/liked-songs/liked-songs.component.html
@@ -11,10 +11,9 @@
         (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)"> -->
     <p-table [value]="likedSongs" [lazy]="true" (onLazyLoad)="onPageChange($event)" [rows]="pageSize"
         [showCurrentPageReport]="true" [rowsPerPageOptions]="[10, 25, 50]" [totalRecords]="totalLikedSongsCount"
-        [paginator]="true"  #tableRef
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" paginatorPosition="top"
-        [(selection)]="selectedTracksList" [tableStyle]="{'min-width': '60rem'}" (onRowReorder)="tableReordered($event)"
-        (onSort)="tableSorted($event)">
+        [paginator]="true" #tableRef currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+        paginatorPosition="top" [(selection)]="selectedTracksList" [tableStyle]="{'min-width': '60rem'}"
+        (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)">
 
         <ng-template pTemplate="caption">
             <div class="flex flex-row justify-content-between">
@@ -59,10 +58,7 @@
                             </p-buttonGroup> -->
                             <p-button class=" btn-grp-custom" [outlined]="!showSummaryGraph" size="small"
                                 (onClick)="showSummaryGraphChanged(false)" pTooltip="Summary Graph"
-                                tooltipPosition="bottom">
-                                <span class="material-symbols-outlined">
-                                    show_chart
-                                </span>
+                                tooltipPosition="bottom" icon="pi pi-chart-bar">
                             </p-button>
                         </div>
 
@@ -81,13 +77,11 @@
                 </div>
             </div>
             <div>
-                <p-chart type="line" [data]="data2" [options]="options" *ngIf="showSummaryGraph" />
-
-                <!-- <div *ngIf="showSummaryGraph">
+                <!-- <p-chart type="line" [data]="data2" [options]="options" *ngIf="showSummaryGraph" /> -->
+                <div *ngIf="showSummaryGraph">
                     <app-track-summary-graph [tracksData]="tracksData"
                         [selectedTracksList]="selectedTracksList"></app-track-summary-graph>
-                </div> -->
-
+                </div>
             </div>
         </ng-template>
         <ng-template pTemplate="header">
