--- a/src/app/spotify/shared/projections-graph/projections-graph.component.html
+++ b/src/app/spotify/shared/projections-graph/projections-graph.component.html
@@ -1,1 +1,5 @@
-<p>projections-graph works!</p>
+@if(isLoading) {
+<app-progress-bar></app-progress-bar>
+}@else {
+<p-chart type="line" [data]="data" [options]="options" />
+}
