added duplicate selected songs

--- a/src/app/spotify/audio-history/audio-history.component.html
+++ b/src/app/spotify/audio-history/audio-history.component.html
@@ -15,10 +15,10 @@
                 <h3>Recently Played</h3>
                 <div class="flex flex-row align-items-center">
                     <div class="flex flex-row align-items-center">
-                        <div *ngIf="selectedTracksList.length>0">
+                        <!-- <div *ngIf="selectedTracksList.length>0">
                             <p-button icon="pi pi-chart-line" class="px-2" pTooltip="Projections Graph"
                                 tooltipPosition="bottom" (onClick)="showProjections()" ></p-button>
-                        </div>
+                        </div> -->
 
                         <div>
                             <p-button [rounded]="true" severity="success" icon="pi pi-refresh"
