--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,6 +49,14 @@
                         </a>
                     </li>
 
+                    <li (click)="navigateToPath('/spotify/search')">
+                        <a pRipple
+                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
+                            <i class="pi pi-search mr-2"></i>
+                            <span class="font-medium">Search Tracks</span>
+                        </a>
+                    </li>
+
                     <li (click)="navigateToPath('/spotify/audio-library')">
                         <a pRipple
                             class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
