--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -84,7 +84,7 @@
                         </a>
                     </li> 
 
-                    <li (click)="navigateToPath('/spotify/audio-history')">
+                    <li (click)="navigateToPath('/spotify/recently-played')">
                         <a pRipple
                             class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
                             <i class="pi pi-history mr-2"></i>
