aded changes and fixes

--- a/src/app/spotify/audio-history/audio-history.component.html
+++ b/src/app/spotify/audio-history/audio-history.component.html
@@ -148,7 +148,7 @@
         </ng-template>
         <ng-template pTemplate="emptymessage">
             <tr class="">
-                <td colspan="12">
+                <td colspan="12" class="text-center">
                     {{dataMessage}}
                 </td>
             </tr>
