--- a/src/app/spotify/liked-songs/liked-songs.component.html
+++ b/src/app/spotify/liked-songs/liked-songs.component.html
@@ -145,7 +145,7 @@
         </ng-template>
         <ng-template pTemplate="emptymessage">
             <tr class="">
-                <td colspan="10">
+                <td colspan="10" class="text-center">
                     {{dataMessage}}
                 </td>
             </tr>
