--- a/src/app/spotify/audio-library/audio-library.component.html
+++ b/src/app/spotify/audio-library/audio-library.component.html
@@ -167,7 +167,7 @@
         </ng-template>
         <ng-template pTemplate="emptymessage">
             <tr class="">
-                <td colspan="12">{{dataMessage}}</td>
+                <td colspan="12" class="text-center">{{dataMessage}}</td>
             </tr>
         </ng-template>
     </p-table>
