--- a/src/app/spotify/playlist-details/playlist-details.component.html
+++ b/src/app/spotify/playlist-details/playlist-details.component.html
@@ -140,7 +140,7 @@
         <ng-template pTemplate="emptymessage">
             <tr class="">
                 <!-- <td colspan="10">No tracks found in the current playlist.</td> -->
-                <td colspan="10">{{dataMessage}}</td>
+                <td colspan="10" class="text-center">{{dataMessage}}</td>
             </tr>
         </ng-template>
     </p-table>
