--- a/src/app/strava/activities/activities.component.html
+++ b/src/app/strava/activities/activities.component.html
@@ -68,7 +68,7 @@
         </ng-template>
         <ng-template pTemplate="emptymessage">
             <tr>
-                <td colspan="10">No activities found.</td>
+                <td colspan="10" class="text-center">No activities found.</td>
             </tr>
         </ng-template>
     </p-table>
